testing changes to deploy manifests

--- a/config/samples/_v1beta1_gpupolicyadapter-vgpu.yaml.tmpl
+++ b/config/samples/_v1beta1_gpupolicyadapter-vgpu.yaml.tmpl
@@ -4,10 +4,7 @@ metadata:
   name: vgpu
 spec:
   images:
-    driver: cr.lan.kralicky.dev/nvidia-vgpu-driver:latest
+    driver: your.registry.local/vgpu-driver:tag
   vgpu:
     licenseConfigMap: licensing-config
     licenseServerKind: nls
-  template:
-    toolkit:
-      imagePullPolicy: Always
