Invalidate docker cache for ui build on new commits

--- a/Dockerfile.ui
+++ b/Dockerfile.ui
@@ -3,11 +3,12 @@ FROM node:14-alpine3.10
 WORKDIR /app
 
 RUN apk add --no-cache git rsync
-RUN git clone --depth=1 --branch=monitoring https://github.com/rancher/opni-ui.git .
-RUN yarn install
-RUN yarn opni:build
-RUN node_modules/.bin/nuxt generate -c product/opni/nuxt.config.js
-RUN printf '#!/bin/sh\n rsync -a --exclude=favicon.ico --chown=$1 /app/dist/* /dist/\n\n' > /sync-dist.sh \
+ADD https://api.github.com/repos/rancher/opni-ui/git/refs/heads/monitoring /tmp/version.json
+RUN git clone --depth=1 --branch=monitoring https://github.com/rancher/opni-ui.git . \
+  && yarn install \
+  && yarn cache clean \
+  && node_modules/.bin/nuxt generate -c product/opni/nuxt.config.js \
+  && printf '#!/bin/sh\n rsync -a --exclude=favicon.ico --chown=$1 /app/dist/* /dist/\n\n' > /sync-dist.sh \
   && chmod +x /sync-dist.sh
 
 ENTRYPOINT [ "/sync-dist.sh" ]
