Add capability and installer templating apis

--- a/Dockerfile.ui
+++ b/Dockerfile.ui
@@ -2,9 +2,12 @@ FROM node:14-alpine3.10 as builder
 
 WORKDIR /app
 
+ARG REPO=kralicky/opni-ui
+ARG BRANCH=installer-commands
+
 RUN apk add --no-cache git
-ADD https://api.github.com/repos/rancher/opni-ui/git/refs/heads/monitoring /tmp/version.json
-RUN git clone --depth=1 --branch=monitoring https://github.com/rancher/opni-ui.git . \
+ADD https://api.github.com/repos/${REPO}/git/refs/heads/${BRANCH} /tmp/version.json
+RUN git clone --depth=1 --branch=${BRANCH} https://github.com/${REPO}.git . \
   && yarn install \
   && yarn cache clean \
   && node_modules/.bin/nuxt generate -c product/opni/nuxt.config.js
