docs work in progress

--- a/docs/assets/scss/_variables_project.scss
+++ b/docs/assets/scss/_variables_project.scss
@@ -43,5 +43,7 @@ $font-family-sans-serif: $body-font;
 $font-family-monospace: $mono-font;
 $font-family-base: $font-family-sans-serif;
 
+$font-size-base: 1.1rem;
+
 // nav
 $navbar-dark-hover-color: $primary !default;
