--- a/docs/assets/scss/_styles_project.scss
+++ b/docs/assets/scss/_styles_project.scss
@@ -11,6 +11,11 @@
   .navbar-brand {
     padding-top: 0;
     padding-bottom: 0;
+
+    span:last-child {
+      // hide the default text
+      display: none;
+    }
   }
 
   svg {
@@ -19,5 +24,18 @@
     margin: 0 !important;
     min-height: 48px;
   }
+}
 
+.td-page-meta--child {
+  display: none !important;
+}
+
+button.drawiobtn {
+  border: 0px !important;
+  border-radius: 4px !important;
+  transition: all 0.1s ease-in-out;
+
+  &:hover {
+    background: $primary;
+  }
 }
