--- a/docs/assets/scss/_styles_project.scss
+++ b/docs/assets/scss/_styles_project.scss
@@ -6,7 +6,7 @@
 
 .td-navbar {
   background: $lightest;
-  box-shadow: 0 0.25rem 1rem rgba(0, 0, 0, 0.15);
+  box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, 0.15);
 
   .navbar-brand {
     padding-top: 0;
@@ -37,5 +37,30 @@ button.drawiobtn {
 
   &:hover {
     background: $primary;
+  }
+}
+
+.section-index {
+  background: $lighter;
+  margin-top: 2rem;
+  padding: 1rem;
+
+  .other-pages-label {
+    color: $darker !important;
+    margin-bottom: 10px;
+  }
+
+  .page-description {
+    color: $darkest !important;
+  }
+
+  div.entry {
+    padding-bottom: 0;
+  }
+}
+
+.td-main {
+  main {
+    box-shadow: 0 0.1rem 0.75rem rgba(0, 0, 0, 0.2);
   }
 }
