--- a/docs/assets/scss/_variables_project.scss
+++ b/docs/assets/scss/_variables_project.scss
@@ -28,7 +28,7 @@ $link-hover-decoration: none;
 
 // fonts
 $td-enable-google-fonts: false;
-@import url(http://fonts.googleapis.com/css?family=Lato|Poppins|Roboto+Mono:400italic,700italic,400,700);
+@import url(https://fonts.googleapis.com/css?family=Lato|Poppins|Roboto+Mono:400italic,700italic,400,700);
 
 $header-font: 'Poppins',
 'Times New Roman';
