relabel metrics & friendly job names

--- a/pkg/otel/templates/metrics.tmpl
+++ b/pkg/otel/templates/metrics.tmpl
@@ -164,7 +164,7 @@ kubeletstats:
 
 {{- define "metrics-prometheus-processor" -}}
 {{- if.Metrics.Enabled -}}
-  filter/metrics:
+  filter/metrics: #this is for dropping high cardinality metrics
     metrics:
       exclude:
         match_type: regexp
